Facility Detail Page

--- a/project1/webapp/view/FacilitiesDetails.view.xml
+++ b/project1/webapp/view/FacilitiesDetails.view.xml
@@ -1,96 +1,212 @@
 <mvc:View controllerName="sap.ui.com.project1.controller.FacilitiesDetails"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m"
 	xmlns:m="sap.m"
+	xmlns:suite="sap.suite.ui.commons"
+	xmlns="sap.uxap"
+	xmlns:uxap="sap.uxap"
+	xmlns:richtexteditor="sap.ui.richtexteditor"
+	xmlns:layout="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form"
 	xmlns:c="sap.ui.core"
-	xmlns:fb="sap.ui.comp.filterbar"
-	xmlns:core="sap.ui.core"
     displayBlock="true"
     height="100%"
-    busyIndicatorDelay="0">
-	<Page  showHeader="true" >
-		<customHeader>
-			<Bar>
-				<contentLeft>
-					<Button icon="sap-icon://nav-back" press=".onNavBack" />
-					<Title text="Shah Hostel" class="customPageTitle"/>
-				</contentLeft>
-				<contentRight>
-					<Button icon="sap-icon://log" press=".onHome" />
-				</contentRight>
-			</Bar>
-		</customHeader>
-		<content>
-			<fb:FilterBar
-                id="FD_id_FilterbarEmployee"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="FC_onPressClear"
-                showClearOnFB="true"
-                search="FC_onSearch"
-                filterChange="IA_.onFilterChange"
-                afterVariantLoad="IA_.onAfterVariantLoad"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto">
-				<fb:filterGroupItems>
-					<fb:FilterGroupItem
-                        name="Facility Name"
-                        label="Facility Name"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-						<fb:control>
-							<ComboBox
-                                id="FD_id_FacilityName"
-                                items="{Facilities>/}"
-                                showClearIcon="true"
-                            >
-								<core:Item
-                                    key="{Facilities>FacilityName}"
-                                    text="{Facilities>FacilityName}"
-                                />
-							</ComboBox>
-						</fb:control>
-					</fb:FilterGroupItem>
-				</fb:filterGroupItems>
-			</fb:FilterBar>
-			<Table
-                id="FD_id_facilityTable"
-                sticky="ColumnHeaders,HeaderToolbar"
-                mode="SingleSelectLeft"
-                width="auto" busyIndicatorDelay="0"
-                class="sapUiResponsiveMargin"
-                items="{path: 'Facilities>/'}">
-				<headerToolbar>
-					<OverflowToolbar>
-						<Title  text="Facilities ({=${Facilities>/}.length})" />
-						<ToolbarSpacer />
-						<Button text="Add Facility" press="FD_RoomDetails" type="Accept"/>
-						<Button text="Edit" press="FD_EditDetails" type="Transparent"/>
-						<Button text="Delete" press="HM_DeleteDetails" type="Reject"/>
-					</OverflowToolbar>
-				</headerToolbar>
-				<columns>
-					<Column  demandPopin="true">
-						<Text text="Facility Name"/>
-					</Column>
-					<Column demandPopin="true">
-						<Text text="Description"/>
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text  text="Room Image"/>
-					</Column>
-				</columns>
-				<items>
-					<ColumnListItem>
-						<cells>
-							<Text text="{Facilities>FacilityName}" />
-                            <ExpandableText text="{Facilities>Description}" maxCharacters="20"></ExpandableText>
-							<Button text="View" press="FC_viewroom" type="Transparent"/>
-						</cells>
-					</ColumnListItem>
-				</items>
-			</Table>
-		</content>
-	</Page>
+	xmlns:core="sap.ui.core"
+    busyIndicatorDelay="0"
+	xmlns:u="sap.ui.unified"
+>
+	<m:Page
+        navButtonPress="BI_onButtonPress"
+        showNavButton="true"
+        title="Facility Details"
+    >
+		<m:headerContent>
+			<m:Button
+                press="onLogout"
+                icon="sap-icon://log"
+                tooltip="{i18n>logoutTooltip}"
+                type="Transparent"
+            />
+		</m:headerContent>
+		<ObjectPageLayout id="FD_id_ObjectPageLayout">
+			<sections>
+				<ObjectPageSection
+                    titleUppercase="false"
+                    id="FD_id_OrderHeaderSection1"
+                    title="Facility Information"
+                >
+					<subSections>
+						<ObjectPageSubSection id="FD_id_dsd1">
+							<blocks>
+								<f:SimpleForm
+                                    id="FD_id_simpleCompanyDetails"
+                                    busyIndicatorDelay="0"
+                                    editable="true"
+                                    layout="ColumnLayout"
+                                    labelSpanXL="2"
+                                    labelSpanL="3"
+                                    labelSpanM="2"
+                                    labelSpanS="12"
+                                    adjustLabelSpan="false"
+                                    emptySpanXL="0"
+                                    emptySpanL="0"
+                                    emptySpanM="0"
+                                    emptySpanS="0"
+                                    columnsXL="3"
+                                    columnsL="2"
+                                    columnsM="2"
+                                    singleContainerFullSize="false"
+                                >
+									<f:content>
+										<!-- Branch Code -->
+										<m:Label text="Branch Code" required="true" />
+										<m:ComboBox
+                    id="FD_id_RoomType123"
+                    placeholder="Select branch Code"
+                    selectedKey="{FacilitiesModel>/BranchCode}"
+                    items="{BranchModel>/}"
+                    showSecondaryValues="true"
+                    change=".onFacilitybranchChange"
+                    valueStateText="{i18n>selectBranchCode}" editable="{editable>/Edit}"
+                >
+											<core:ListItem
+                        key="{BranchModel>BranchID}"
+                        text="{BranchModel>BranchID}"
+                        additionalText="{BranchModel>Name}"
+                    />
+										</m:ComboBox>
+										<!-- Facility Name -->
+										<m:Label text="Facility Name" required="true" />
+										<m:Input
+                    id="FD_id_FacilityName"
+                    value="{FacilitiesModel>/FacilityName}"
+                    placeholder="Enter Facility Name"
+                    maxLength="60"
+                    liveChange=".onFacilityNameChange"
+                    valueStateText="{i18n>enterFacilityName}"  editable="{editable>/Edit}"
+                />
+										<!-- Type -->
+										<m:Label text="Type" required="true" />
+										<m:ComboBox
+                    id="FD_id_FacilityName1"
+                    items="{FacilityType>/}"
+                    placeholder="Enter Type"
+                    value="{FacilitiesModel>/Type}"
+                    change=".onFacilityTypeChange"
+                    width="100%"
+                    valueStateText="{i18n>enterFacilityType}" editable="{editable>/Edit}"
+                >
+											<core:Item
+                        key="{FacilityType>ID}"
+                        text="{FacilityType>FacilityName}"
+                    />
+										</m:ComboBox>
+										<!-- Price + Unit -->
+										<m:Label text="Price" required="true" />
+										<m:Input
+                            id="FD_id_Price"
+                            value="{FacilitiesModel>/Price}"
+                            placeholder="Enter Price"
+                            maxLength="10"
+                            liveChange=".onFacilityPriceChange"
+                            valueStateText="{i18n>enterFacilityPrice}" editable="{editable>/Edit}"
+                        />
+										<m:ComboBox
+                            id="FD_id_Rate"
+                            items="{RateType>/}"
+                            selectedKey="Per Day"
+                            value="{FacilitiesModel>/UnitText}"
+                            change=".onFacilityRateChange"
+                            width="100%"
+                            valueStateText="{i18n>selectRateType}" editable="{editable>/Edit}"
+                        >
+											<core:Item
+                                key="{RateType>ID}"
+                                text="{RateType>RateType}"
+                            />
+										</m:ComboBox>
+										<!-- Currency -->
+										<m:Label text="Currency" required="true" />
+										<m:ComboBox
+                    id="FD_id_Currency"
+                    selectedKey="{FacilitiesModel>/Currency}"
+                    items="{CurrencyModel>/}"
+                    valueStateText="Select Currency"
+                    width="100%"
+                    change=".onFacilitybranchChange"
+                    placeholder="Select Currency" editable="{editable>/Edit}"
+                >
+											<c:Item
+                        key="{CurrencyModel>currency}"
+                        text="{CurrencyModel>currency}"
+                    />
+										</m:ComboBox>
+									</f:content>
+								</f:SimpleForm>
+							</blocks>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+				<ObjectPageSection
+                    titleUppercase="false"
+                    id="FD_id_rderSection"
+                    title="Facility Images"
+                >
+					<subSections>
+						<ObjectPageSubSection id="FD_id_ordersection">
+							<blocks>
+								<m:HBox
+                                    id="FD_id_ImagesContainer"
+                                    justifyContent="Start"
+                                    alignItems="Start"
+                                    class="sapUiSmallMargin"
+                                    items="{DisplayImagesModel>/DisplayImages}"
+                                >
+									<m:VBox class="sapUiSmallMarginEnd" width="150px" alignItems="Center">
+										<m:Image
+        src="{DisplayImagesModel>src}"
+        width="120px"
+        height="120px"
+    />
+										<m:Text
+        text="{DisplayImagesModel>fileName}"
+        textAlign="Center"
+        wrapping="true"
+    />
+										<!-- Delete button visible only in edit mode -->
+										<m:Button
+    icon="sap-icon://delete"
+    type="Reject"
+    text="Delete"
+    visible="{editable>/Edit}"
+    press=".onPressImageDelete"
+/>
+									</m:VBox>
+								</m:HBox>
+							</blocks>
+						</ObjectPageSubSection>
+					</subSections>
+				</ObjectPageSection>
+			</sections>
+		</ObjectPageLayout>
+		<m:footer>
+			<m:Bar id="FD_id_FooterBar">
+				<m:contentRight>
+					<m:Button
+                        id="FD_id_editButton"
+                        visible="{= !${editable>/Edit} }"
+                        text="Edit"
+                        type="Transparent"
+                        press="BI_onEditButtonPress"
+                    />
+					<m:Button
+                        id="FD_id_SaveButton"
+                        visible="{=${editable>/Edit}}"
+                        text="Save"
+                        type="Accept"
+                        press="BT_onsavebuttonpress"
+                    />
+				</m:contentRight>
+			</m:Bar>
+		</m:footer>
+	</m:Page>
 </mvc:View>
