Booking Wizard page Visibiliti changes

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -153,8 +153,7 @@
                             horizontal="true"
                             vertical="true"
                             focusable="true"
-                            class="sapUiContentPadding"
-                        >
+                            class="sapUiContentPadding"                        >
                             <fb:FilterBar
                                 id="filterbar"
                                 persistencyKey="myPersKey"
