--- a/project1/webapp/view/Room_Details.view.xml
+++ b/project1/webapp/view/Room_Details.view.xml
@@ -111,7 +111,11 @@
                             press="HM_DeleteRoom"
                             type="Reject"
                         />
-                        
+                          <Button
+                            press="RD_onDownload"
+                            type="Transparent"
+                            text="Download"
+                        />
                      
                     </OverflowToolbar>
                 </headerToolbar>
