--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1017,3 +1017,16 @@
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+.profile-header-bg{
+  background-color: #009688;
+}
+
+.profile-sidebar{
+  background-color: #f5f5f5;
+  border-right: 2px;
+}
+
+.profile-contact-text {
+    color: #E0F2F1;
+}
