--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -1030,3 +1030,12 @@
 .profile-contact-text {
     color: #E0F2F1;
 }
+
+
+.roomCarouselImage img,
+.roomCarouselImage {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  border-radius: 8px;
+}
